--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>net.kaczmarzyk</groupId>
+            <artifactId>specification-arg-resolver</artifactId>
+            <version>2.6.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
